fixes padding caused by invisible border

--- a/src/indigo/less/kbc-user.less
+++ b/src/indigo/less/kbc-user.less
@@ -54,6 +54,7 @@
     padding: 0;
     color: #89959f;
     max-width: 184px;
+    border-width: 0;
     .kbc-icon-picker {
       width: 36px;
       height: 38px;
